# rcvm_aqua

./: CMakeLists.txt  README.md  package.xml
launch/: affirmative.launch  attention.launch  danger.launch  follow_me.launch  indicate_left.launch  indicate_movement.launch  indicate_movement_left.launch  indicate_movement_right.launch  indicate_object.launch  indicate_object_left.launch  indicate_object_right.launch  indicate_stay.launch  lost.launch  malfunction.launch  negative.launch  possibly.launch  rcvm.launch  rcvm_record.launch  rcvm_services.launch  repeat_last.launch  report_battery.launch
scripts/: client.py  indicate_movement_right.sh  indicate_object_left.sh  indicate_object_right.sh  rcvm_ac.py  server.py
src/: autopilot_calibrate.py  rcvm_pilot_client.py  server.py  timeout.py
srv/: Affirmative.srv  Headshake.srv  ImLost.srv  IndicateObject.srv  Malfunction.srv  ReportEnergy.srv  Shake.srv
