<?xml version="1.0"?>
<package>
  <name>rcvm_aqua</name>
  <version>0.5.0</version>
  <description>Services for meaningful_motion using the Aqua AUV </description>

  <author email="fulto081@umn.edu">Michael Fulton</author>
  <maintainer email="fulto081@umn.edu">Michael Fulton</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>aquacore</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>aquacore</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
